--- a/NCPWorkflowHelper/NCPWorkflowHelper.csproj
+++ b/NCPWorkflowHelper/NCPWorkflowHelper.csproj
@@ -14,6 +14,7 @@
     <RunAnalyzersDuringLiveAnalysis>True</RunAnalyzersDuringLiveAnalysis>
     <PackageIcon>icons8-snoopy-100.png</PackageIcon>
     <ApplicationIcon>1-8a06832f.ico</ApplicationIcon>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
