--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="EPPlus" Version="8.1.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="Prism.Core" Version="9.0.537" />
+    <PackageReference Include="System.Runtime" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
