--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="8.1.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0-rc.2.25502.107" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="10.0.0-rc.2.25502.107" />
     <PackageReference Include="Prism.Core" Version="9.0.537" />
     <PackageReference Include="System.Runtime" Version="4.3.0" />
   </ItemGroup>
